--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+        <div class="background">
+            <img class="logo" src="/img/logo.svg" alt="">
+        </div>
+        
+        <div class="margin">
+            <h1>
+                Internet Deve essere al servizio del "bene pubblico": il <br>
+                manifesto di Tim Bernes-Lee
+            </h1>
+            <P class="autor color_grey">
+                Scritto da <span class="color_blu">The Booleaner</span><br>
+                il 10/10/2020
+            </P>   
+        </div>
+    </header>
 
     <main></main>
 
