--- a/index.html
+++ b/index.html
@@ -74,10 +74,22 @@
             </div>
         </div>
 
-        
+        <!--description-->
+        <div class="margin_top">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, cumque est non praesentium dolore soluta et nemo eaque blanditiis dolorum aut laborum natus, error corporis perferendis unde impedit, incidunt assumenda ea labore nesciunt laudantium dolor! Natus eos adipisci porro eveniet repellendus reiciendis, minus rerum fugit, nihil commodi, neque incidunt ducimus est corporis nam quibusdam facere ex earum tempore asperiores iste corrupti nesciunt eligendi. Voluptatibus non quia consectetur? <span class="illuminated"> Quam eos ducimus natus optio necessitatibus a dolores cumque illum? Quisquam iusto optio sit ipsum magnam perferendis consectetur fugiat, nesciunt in magni</span>, dolor similique excepturi dolorem accusantium a nostrum reiciendis nemo voluptas vitae?</p>
+        </div>
     </main>
 
-    <footer></footer>
+    <!--interes-->
+    <footer class="margin">
+        <span class="color_grey">Potrebbero interessarti</span>
+        <div class="to_interes">
+            <img src="/img/monitor.jpg" alt="">
+        </div>
+        <div class="to_interes">
+            <img src="/img/graph.jpg" alt="">
+        </div>
+    </footer>
 
 </body>
 </html>
