--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <header>
         <div class="background">
-            <img class="logo" src="/img/logo.svg" alt="">
+            <img class="logo" src="./img/logo.svg" alt="">
         </div>
         <div class="margin">
             <h1>
